# tiny-args

./: Cargo.toml  MIT  README.md
examples/: demo.rs  demo_minimal.rs
src/: lib.rs
