[package]
name = "tiny-args"
version = "0.2.1"
edition = "2024"
description = "Tiny command line argument parser"
readme      = "README.md"
categories  = ["command-line-interface"]
keywords    = ["cli", "args", "parser", "tiny", "simple"]

license    = "MIT"
repository = "https://github.com/lhndo/tiny-args"

[dependencies]
